--- a/overlay/SettingsOverlayM2011K2G/AndroidManifest.xml
+++ b/overlay/SettingsOverlayM2011K2G/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:allowBackup="false"
     package="com.android.settings.overlay.m2011k2g">
     <application android:hasCode="false" />
     <overlay android:targetPackage="com.android.settings"
