--- a/overlay/WifiResVenus/AndroidManifest.xml
+++ b/overlay/WifiResVenus/AndroidManifest.xml
@@ -13,6 +13,7 @@
 <!-- Pixel specific wifi overlays -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.wifi.resources.venus"
+    android:allowBackup="false"
     android:versionCode="1"
     android:versionName="1.0">
     <application android:hasCode="false" />
