fixup! venus: Do not allow backups of overlays
cmdline used:
find . -type f -name "*.xml" -exec sed -i '/android:hasCode="false"/ { /android:allowBackup="false"\/>/! s/\/>/ android:allowBackup="false"\/>/; }' {} +

--- a/rro_overlays/SettingsProviderOverlayVenus/AndroidManifest.xml
+++ b/rro_overlays/SettingsProviderOverlayVenus/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:allowBackup="false"
     package="com.aosp.settingsprovideroverlay.venus">
 
-    <application android:hasCode="false" />
+    <application android:hasCode="false" android:allowBackup="false"/>
     <overlay android:targetPackage="com.android.providers.settings"
                    android:isStatic="true"
                    android:priority="750"/>
