--- a/rro_overlays/SettingsOverlayM2011K2G/AndroidManifest.xml
+++ b/rro_overlays/SettingsOverlayM2011K2G/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:allowBackup="false"
     package="com.android.settings.overlay.m2011k2g">
-    <application android:hasCode="false" />
+    <application android:hasCode="false" android:allowBackup="false"/>
     <overlay android:targetPackage="com.android.settings"
              android:requiredSystemPropertyName="ro.boot.hwc"
              android:requiredSystemPropertyValue="GL"
