--- a/rro_overlays/WifiResVenus/AndroidManifest.xml
+++ b/rro_overlays/WifiResVenus/AndroidManifest.xml
@@ -13,10 +13,9 @@
 <!-- Pixel specific wifi overlays -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.wifi.resources.venus"
-    android:allowBackup="false"
     android:versionCode="1"
     android:versionName="1.0">
-    <application android:hasCode="false" />
+    <application android:hasCode="false" android:allowBackup="false"/>
     <overlay
       android:targetPackage="com.android.wifi.resources"
       android:targetName="WifiCustomization"
