venus: Support touch sensitivity mode switching
Write the sysfs node to set touch sensitivity mode when the property
changes.

Bug: 199104397
Test: toggle the touch sensitivity button in Settings and check log.

Signed-off-by: davidycchen <davidycchen@google.com>
Signed-off-by: ralph950412 <ralph950412@gmail.com>
Change-Id: I1bd9258dcfa6897ee6febc5387c9504bcca1bb24

--- a/rootdir/etc/init.venus.rc
+++ b/rootdir/etc/init.venus.rc
@@ -1,4 +1,5 @@
 #
+# Copyright (C) 2021 Raphielscape LLC. and Haruka LLC.
 # Copyright (C) 2023 StatiXOS
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,3 +14,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+# Toggle glove_mode according to touch_sensitivity_mode
+on property:persist.vendor.touch_sensitivity_mode=0 && property:sys.boot_completed=1
+    write /sys/devices/platform/soc/a8c000.spi/spi_master/spi1/spi1.0/glove_mode 00
+
+on property:persist.vendor.touch_sensitivity_mode=1 && property:sys.boot_completed=1
+    write /sys/devices/platform/soc/a8c000.spi/spi_master/spi1/spi1.0/glove_mode 01
+
+# Route touch_sensitivity_mode to persist
+on property:debug.touch_sensitivity_mode=0
+    setprop persist.vendor.touch_sensitivity_mode 0
+
+on property:debug.touch_sensitivity_mode=1
+    setprop persist.vendor.touch_sensitivity_mode 1
